--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,21 +4,21 @@
 
     <item
         android:title="Home"
-        android:id="@+id/home"
+        android:id="@+id/fragmentHome"
         android:icon="@drawable/baseline_home_24"
         android:enabled="true"/>
 
     <item
-        android:id="@+id/setting"
+        android:id="@+id/fragmentcart"
         android:title="setting"
         android:icon="@drawable/outline_app_settings_alt_24"/>
 
     <item
-        android:id="@+id/cart"
+        android:id="@+id/fragmentoffer"
         android:title="cart"
         android:icon="@drawable/baseline_add_shopping_cart_24"/>
     <item
-        android:id="@+id/profile"
+        android:id="@+id/fragmentprofile"
         android:title="profile"
         android:icon="@drawable/baseline_person_24"/>
 </menu>
