--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/feedbackfragmentid"
+        android:id="@+id/fragmentcart"
         android:icon="@drawable/outline_app_settings_alt_24"
         android:title="settings"
         app:showAsAction="always" />
